fixing background color and spacing

--- a/styles/filter-button.css
+++ b/styles/filter-button.css
@@ -1,3 +1,66 @@
+.sidebar input,
+#filter-toggle{
+  opacity: 0;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
+
+.filter-button{
+  font-size: 15px;
+  font-family: var(--second-font-family);
+  -webkit-text-stroke: 1.3px;
+
+  position: absolute;
+  top: 250px;
+  padding: 1vw 1.2vw 1vw 1.2vw;
+  background-color: white;
+  color: black; 
+}
+.filter-button:hover {
+  background-color: rgba(10, 54, 65, 0.47);
+  backdrop-filter: blur(20px);
+  color: white;
+  translate: 1s;
+}
+
+.sidebar {
+  position: absolute;
+  left: -330px;
+  top: 300px;
+  width: 318px;
+  background: white;
+  z-index: 50;
+  border-radius: 0 8px 8px 0;
+  padding-left: 10px;
+  transition: 0.5s;
+}
+.sidebar fieldset {
+  border: none;
+  padding-left: 0;
+}
+
+.keyboard-nav{
+  position:absolute;
+  width: 10px;
+  height: 10px;
+  margin: 0px;
+  padding: 0;
+  border: 0;
+  opacity: 0;
+  cursor: pointer;
+  z-index: 2;
+  overflow: hidden;
+}
+.keyboard-nav:focus + label.filter-button {
+  outline: 2px solid rgb(32, 90, 214);
+  outline-offset: 2px;
+}
+label.filter-button{
+  cursor: pointer;
+  display: inline-block;
+}
+
 #filter-toggle:checked ~ .sidebar {
   left: 0;
 }
@@ -30,7 +93,7 @@
   line-height: 2;
   font-weight: 400;
   margin-top: 0;
-  padding-left: 20px;
+  padding-left: 25px;
 }
 .section-vertical input[type="checkbox"]:focus +.checked,
 .section-horizontal input[type="checkbox"]:focus +.checked {
@@ -46,6 +109,7 @@
   font-size: 15px;
   line-height: 2; 
   padding-left: 20px;
+  margin-top: 0;
 }
 
 .sidebar input:checked + .checked {
@@ -111,6 +175,10 @@ li .color-checked{
 }
 
 @media(max-width: 900px) {
+label.filter-button{
+  display: none;
+}
+
   details[open] .filter-information {
   display: block;
   padding-top: 30px;
@@ -119,6 +187,9 @@ li .color-checked{
 
 .filter-information input {
   opacity: 0;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
 }
 .filter-information fieldset {
   border: none;
@@ -145,7 +216,7 @@ li .color-checked{
 
 .section-horizontal {
   grid-template-columns: auto auto auto auto;
-  column-gap: 10px;
+  column-gap: 5px;
   font-size: 12px;
   width: 50%;
   padding-left: 0;
