--- a/styles/generell.css
+++ b/styles/generell.css
@@ -1,5 +1,5 @@
 :root {
-  --background-color: rgba(2, 46, 57, 3%);
+  --background-color: #F8FBFC;
   --main-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --second-font-family: "Julius Sans One", Arial, Helvetica, sans-serif;
 }
@@ -297,6 +297,7 @@ footer a {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  background: #F8FBFC;
 }
 
 /* Hamburger menu */
@@ -316,6 +317,7 @@ footer a {
 details[open] .navigation-hamburger {
   transform: translateX(0);
   opacity: 1;
+  padding-left: 30px;
 }
 
 .navigation-hamburger a{
